fix podcust icons alignement

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,5 +1,7 @@
 @import "../lib/index";
 
+// home page
+
 .intro {
   @include breakpoint(mobileonly) {
     width: 100%;
@@ -18,9 +20,45 @@
       font-family: "Open sans";
       font-size: 36px;
       line-height: 45px;
+      margin-bottom: 1rem;
+    }
+  }
+  .actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    .button {
+      @include breakpoint(mobileonly) {
+        margin: auto;
+        margin-top: 20px;
+      }
     }
   }
 }
+
+.podcast-icon {
+  width: 32px;
+  height: 32px;
+  margin: 0px 12px;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+}
+
+.podcast-channels {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-left: 10px;
+  @include breakpoint(mobileonly) {
+    margin-left: 0px;
+    margin: auto;
+    margin-top: 20px;
+  }
+}
+
+// about page
+
 .blablas {
   display: flex;
   align-self: flex-start;
@@ -97,20 +135,4 @@
     background: transparent;
     border: #d9147d 1px solid;
   }
-}
-
-.podcast-icon {
-  width: 32px;
-  height: 32px;
-  margin-left: 24px;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
-  @media (max-width: 376px) {
-    margin-left: 8px;
-  }
-}
-
-.podcast-channels {
-  margin-left: 200px;
-  margin-top: -31px;
-  cursor: pointer;
 }
